[gd_scene load_steps=22 format=3 uid="uid://4pekoxw82rcq"]

[ext_resource type="PackedScene" uid="uid://btfv2dsqrtbfi" path="res://scenes/player.tscn" id="1_7dexl"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_ysopy"]
[ext_resource type="Texture2D" uid="uid://cg7nfcoy47cku" path="res://assets/tiles/tileset_barreiras.png" id="3_l3rw1"]
[ext_resource type="Texture2D" uid="uid://dp52cds1sxjlp" path="res://assets/tiles/checkpoint_tile.png" id="4_ij55k"]
[ext_resource type="PackedScene" uid="uid://y1ekjgjl4dql" path="res://scenes/fire_gem.tscn" id="5_s2snp"]
[ext_resource type="AudioStream" uid="uid://birr8j5gi2702" path="res://assets/sounds/water.wav" id="6_uvu4l"]
[ext_resource type="AudioStream" uid="uid://bjdwpoxmvkus7" path="res://assets/sounds/fire.wav" id="7_21ui2"]
[ext_resource type="AudioStream" uid="uid://b3abtneg1wl80" path="res://assets/sounds/wind.wav" id="8_n8i4o"]
[ext_resource type="FontFile" uid="uid://qu4rprbv6351" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="9_u5khh"]
[ext_resource type="PackedScene" uid="uid://bqj45opme5qbc" path="res://scenes/earth_gem.tscn" id="10_5g8t8"]
[ext_resource type="PackedScene" uid="uid://cuomsxq5utvba" path="res://scenes/water_gem.tscn" id="11_571wo"]
[ext_resource type="PackedScene" uid="uid://cv15vdd4uc7am" path="res://scenes/checkpoint.tscn" id="12_df3ye"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5vgwt"]
texture = ExtResource("3_l3rw1")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
0:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/physics_layer_2/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_2/angular_velocity = 0.0
0:0/0/physics_layer_3/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_3/angular_velocity = 0.0
0:0/0/custom_data_0 = "fire"
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
1:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_1/angular_velocity = 0.0
1:0/0/physics_layer_2/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_2/angular_velocity = 0.0
1:0/0/physics_layer_3/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_3/angular_velocity = 0.0
1:0/0/custom_data_0 = "water"
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_1/angular_velocity = 0.0
0:1/0/physics_layer_2/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_2/angular_velocity = 0.0
0:1/0/physics_layer_3/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_3/angular_velocity = 0.0
0:1/0/physics_layer_3/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0/custom_data_0 = "air"
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_1/angular_velocity = 0.0
1:1/0/physics_layer_2/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_2/angular_velocity = 0.0
1:1/0/physics_layer_2/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0/physics_layer_3/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_3/angular_velocity = 0.0
1:1/0/custom_data_0 = "earth"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4c01i"]
texture = ExtResource("4_ij55k")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
0:0/0/physics_layer_2/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_2/angular_velocity = 0.0
0:0/0/physics_layer_3/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_3/angular_velocity = 0.0
0:0/0/custom_data_0 = "checkpoint"

[sub_resource type="TileSet" id="TileSet_srb1p"]
physics_layer_0/collision_layer = 14
physics_layer_0/collision_mask = 0
physics_layer_1/collision_layer = 13
physics_layer_1/collision_mask = 0
physics_layer_2/collision_layer = 11
physics_layer_2/collision_mask = 0
physics_layer_3/collision_layer = 7
physics_layer_3/collision_mask = 0
custom_data_layer_0/name = "tipo"
custom_data_layer_0/type = 4
sources/0 = SubResource("TileSetAtlasSource_5vgwt")
sources/1 = SubResource("TileSetAtlasSource_4c01i")

[sub_resource type="Animation" id="Animation_7y8w4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}

[sub_resource type="Animation" id="Animation_kofyu"]
resource_name = "lvl2"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 0.0358968),
"update": 0,
"values": [Vector2(1, 0), Vector2(266, -4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mx2rt"]
_data = {
"RESET": SubResource("Animation_7y8w4"),
"lvl2": SubResource("Animation_kofyu")
}

[sub_resource type="Animation" id="Animation_jdc3h"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-246, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-30, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_bv2la"]
resource_name = "Start"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-246, -0.25, 0, 0.25, 0, 195, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-30, -0.25, 0, 0.25, 0, -30, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-123, 67)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Player:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FireGem:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0imsg"]
_data = {
"RESET": SubResource("Animation_jdc3h"),
"Start": SubResource("Animation_bv2la")
}

[node name="Level 1" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true

[node name="Player" parent="." instance=ExtResource("1_7dexl")]
position = Vector2(-116, 58)
motion_mode = 0
script = ExtResource("2_ysopy")

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_srb1p")
format = 2
layer_0/tile_data = PackedInt32Array(393210, 0, 0, 393209, 0, 1, 393208, 0, 1, 393207, 0, 1, 393206, 0, 1, 327670, 0, 1, 262134, 0, 1, 196598, 0, 1, 131062, 0, 1, 393211, 0, 0, 262139, 0, 1, 196603, 0, 1, 131067, 0, 1, 65526, 0, 1, -10, 0, 1, -65546, 0, 1, -131082, 0, 1, -196618, 0, 1, -196617, 0, 1, -196616, 0, 1, -196615, 0, 1, -196614, 0, 1, -196613, 0, 1, -196612, 0, 1, -196611, 0, 1, -196610, 0, 1, -196609, 0, 1, -131073, 0, 1, -65537, 0, 1, -1, 0, 1, 65535, 0, 1, 131071, 0, 1, 65536, 0, 1, 65537, 0, 1, 65538, 0, 1, 65539, 0, 1, 4, 0, 1, -65532, 0, 1, -131068, 0, 1, -196604, 0, 1, -262140, 0, 1, -327676, 0, 1, 65540, 0, 1, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 327690, 0, 1, 327691, 0, 1, 262155, 0, 1, 196619, 0, 1, 131083, 0, 1, 65547, 0, 1, 11, 0, 1, -65525, 0, 1, -131061, 0, 1, -196597, 0, 1, -262133, 0, 1, -327669, 0, 1, -393205, 0, 1, -393211, 0, 1, -393212, 0, 1, -393210, 0, 1, -393209, 0, 1, -393208, 0, 1, -393207, 0, 1, -393206, 0, 1, -327675, 65536, 0, -262139, 65536, 0, -196603, 65536, 0, -131067, 65536, 0, -65531, 65536, 0, 5, 65536, 0, 65541, 65536, 0, 131077, 65536, 0, 196613, 65536, 0, 262149, 65536, 0, 393221, 65536, 0, 458757, 65536, 0, 65531, 0, 1, -327670, 65536, 0, -262134, 65536, 0, -196598, 65536, 0, -131062, 65536, 0, -65526, 65536, 0, 10, 65536, 0, 65546, 65536, 0, 131082, 65536, 0, 196618, 65536, 0, 262154, 65536, 0, 393226, 65536, 0, 458762, 65536, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 131063, 65536, 0, 131064, 65536, 0, 131065, 65536, 0, 131066, 65536, 0, 65530, 65536, 0, 65529, 65536, 0, -9, 65536, 0, -8, 65536, 0, -7, 65536, 0, -6, 65536, 0, -65543, 65536, 0, -65544, 65536, 0, -65545, 65536, 0, -131081, 65536, 0, -131080, 65536, 0, -131079, 65536, 0, -131078, 65536, 0, -131077, 65536, 0, -65541, 0, 0, -5, 65536, 0, -4, 65536, 0, -65540, 0, 0, -131076, 65536, 0, -131075, 65536, 1, -3, 65536, 1, -2, 65536, 0, -65538, 65536, 1, -131074, 65536, 0, 65532, 0, 1, 65534, 0, 1, 327675, 65536, 1, 458746, 0, 1, 458747, 0, 1, 458748, 0, 1, 458749, 0, 1, 458750, 0, 1, 458751, 0, 1, 393216, 0, 1, 393217, 0, 1, 393218, 0, 1, 393219, 0, 1, 393220, 0, 1, 327677, 0, 1, 327678, 0, 1, 327679, 0, 1, 196607, 0, 1, 262143, 0, 1, 65527, 65536, 0, 65528, 65536, 0, 262135, 65536, 1, 327672, 0, 0)

[node name="FireGem" parent="." instance=ExtResource("5_s2snp")]
position = Vector2(135, -73)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, 0)
zoom = Vector2(4, 4)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
libraries = {
"": SubResource("AnimationLibrary_mx2rt")
}

[node name="Sounds" type="Node" parent="."]

[node name="WaterSounds2D" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("6_uvu4l")
volume_db = -80.0
autoplay = true
bus = &"WaterSounds"

[node name="FireSounds2D" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("7_21ui2")
volume_db = -80.0
autoplay = true

[node name="EarthSounds2D" type="AudioStreamPlayer2D" parent="Sounds"]
volume_db = -80.0

[node name="AirSounds2D" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("8_n8i4o")
volume_db = -80.0
autoplay = true

[node name="Lvl 1" type="Node" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = -246.0
offset_top = -30.0
offset_right = -146.0
offset_bottom = -7.0
theme_override_fonts/font = ExtResource("9_u5khh")
text = "Level 5"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0imsg")
}
autoplay = "Start"

[node name="EarthGem" parent="." instance=ExtResource("10_5g8t8")]
position = Vector2(-41, -23)

[node name="FireGem2" parent="." instance=ExtResource("5_s2snp")]
position = Vector2(-87, -23)

[node name="WaterGem" parent="." instance=ExtResource("11_571wo")]
position = Vector2(41, 61)

[node name="FireGem3" parent="." instance=ExtResource("5_s2snp")]
position = Vector2(-136, 73)

[node name="Checkpoint" parent="." instance=ExtResource("12_df3ye")]
position = Vector2(126, 79)

[connection signal="gem_collected" from="FireGem" to="Player" method="_on_fire_gem_gem_collected"]
